<?xml version="1.0" encoding="utf-8"?><!-- Lint doesn't see non-direct access --><!--suppress AndroidLintUnusedResources -->
<resources>
    <string name="app_name">aRevelation</string>
    <string name="app_slogan">a secure password manager for android</string>
    <string name="open">Open</string>
    <string name="save">Save</string>
    <string name="about">About</string>
    <string name="createNew">New</string>
    <string name="delete">Delete</string>
    <string name="copy">Copy</string>
    <string name="edit">Edit</string>
    <string name="dismiss">Dismiss changes</string>
    <string name="add_entry">Add Entry</string>
    <string name="choose_directory">Choose directory</string>
    <string name="change_password">Change password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="password_changed">Password changed</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="backup">Backup</string>
    <string name="ask_password_message">Input password</string>
    <string name="new_filename">Input Filename</string>
    <string name="self_testing_warning">Warning! Editing and saving could cause data lost! Be careful.</string>
    <string name="self_testing_super_warning">Super Warning! Editing and saving will most likely cause data lost! Be careful.</string>
    <string name="self_testing_passed_message">Self testing passed. Editing is safe</string>
    <string name="self_testing_internal_error">Internal unknown error of self testing. Be careful.</string>
    <string name="decrypt_label">Decrypting…</string>
    <string name="decrypt_canceled_label">Decrypting canceled!</string>
    <string name="decrypt_invalid_password_label">Invalid password</string>
    <string name="decrypt_empty_password_label">No password entered</string>
    <string name="generated_empty_password_label">No password generated, change settings</string>
    <string name="backup_restored">Restored old file, new changes are lost</string>
    <string name="unsaved_changes">Cancel deactivated because of unsaved changes.</string>
    <string name="new_value">New value</string>
    <!--Field names-->
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="notes">Notes</string>
    <string name="updated">Updated</string>
    <string name="generic_hostname">Hostname</string>
    <string name="generic_username">Username</string>
    <string name="generic_password">Password</string>
    <string name="generic_database">Database</string>
    <string name="generic_domain">Domain</string>
    <string name="generic_email">Email</string>
    <string name="generic_url">Url</string>
    <string name="generic_pin">PIN</string>
    <string name="generic_certificate">Certificate</string>
    <string name="generic_keyfile">Keyfile</string>
    <string name="creditcard_cardtype">Card type</string>
    <string name="creditcard_cardnumber">Card number</string>
    <string name="creditcard_expirydate">Expiry date</string>
    <string name="creditcard_ccv">CCV</string>
    <!-- Entry types -->
    <string name="creditcard">Creditcard</string>
    <string name="cryptokey">Cryptokey</string>
    <string name="database">Database</string>
    <string name="door">Door</string>
    <string name="email">Email</string>
    <string name="ftp">FTP</string>
    <string name="generic">Generic</string>
    <string name="phone">Phone</string>
    <string name="shell">Shell</string>
    <string name="remotedesktop">Remote desktop</string>
    <string name="vnc">VNC</string>
    <string name="website">Website</string>
    <string name="folder">Folder</string>
    <!-- Errors -->
    <string name="error">Error</string>
    <string name="error_cannot_save">Error: Can\'t save to file</string>
    <string name="error_cannot_restore">Error: Can\'t restore original from backup</string>
    <string name="error_cannot_backup">Error: Can\'t create backup file, won\'t save</string>
    <string name="cannot_save_file">Can\'t write</string>
    <string name="error_cannot_save_empty_file">Can\'t save empty file</string>

    <!-- Menu -->
    <string name="title_activity_arevelation_settings">Settings</string>
    <string name="title_activity_arevelation_licence">Licence</string>

    <!-- Strings related to Settings -->
    <!-- password settings -->
    <string name="pref_header_security">Security settings</string>
    <string name="pref_header_password">Password settings</string>
    <string name="pref_header_general">General settings</string>

    <string name="pref_title_hide_password_and_secrets">Hide passwords and secrets</string>
    <string name="pref_description_enable_hide_passwords_and_secrets">Displays ****** instead of the passwords or secrets.</string>
    <string name="pref_description_disable_hide_passwords_and_secrets">Displays your password without any obfuscation.</string>

    <string name="pref_title_toggle_password">Quick unlock Passwords</string>
    <string name="pref_description_enable_toggle_password">Displays passwords and secrets directly after clicking a button.</string>
    <string name="pref_description_disable_toggle_password">Displays passwords and secrets only in edit mode.</string>

    <string name="pref_title_lock_in_background">Lock when invisible</string>
    <string name="pref_description_lock_in_background">Reenter the revelation file password to display your secrets after moving the password view into the background or turning screen off. Unsaved changes are lost.</string>
    <string-array name="pref_lock_in_background_titles">
        <item>Instant</item>
        <item>1 minutes</item>
        <item>3 minutes</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_lock_in_background_values">
        <item>0</item>
        <item>1</item>
        <item>3</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_auto_lock">Automatically file-locking</string>
    <string name="pref_description_auto_lock">Locks the file after a specified time.</string>
    <string name="auto_lock_file_locked">File locked</string>
    <plurals name="auto_lock_time_left">
        <item quantity="one">File look in %d minute</item>
        <item quantity="other">File look in %d minutes</item>
    </plurals>
    <string-array name="pref_auto_lock_titles">
        <item>1 minutes</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>20 minutes</item>
        <item>30 minutes</item>
        <item>45 minutes</item>
        <item>1 hour</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_auto_lock_values">
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
        <item>-1</item>
    </string-array>

    <!-- Password settings -->
    <string name="pref_title_enable_characters">Generate passwords with characters</string>
    <string name="pref_description_enable_characters">Include characters a-Z in password generation</string>
    <string name="pref_description_disable_characters">Don\'t include characters a-Z in new passwords</string>

    <string name="pref_title_enable_numbers">Generate passwords with numbers</string>
    <string name="pref_description_enable_numbers">Include numbers 0&#8211;9 in password generation</string>
    <string name="pref_description_disable_numbers">Don\'t include numbers 0&#8211;9 in new passwords</string>

    <string name="pref_title_enable_special_characters">Generate passwords with special characters</string>
    <string name="pref_description_enable_special_characters">Include special characters e.g. #, @, ", =, &#8230; in password generation</string>
    <string name="pref_description_disable_special_characters">Don\'t include special characters e.g. #, @, ", =, &#8230; in new passwords</string>

    <string name="pref_title_enable_auto_incrementation">Auto increment password size</string>
    <string name="pref_description_enable_auto_incrementation">Clicking generate again and the new password has an increased size by two</string>
    <string name="pref_description_disable_auto_incrementation">A new password will always have the default size</string>

    <string name="pref_title_password_size">Default password size</string>
    <string name="pref_description_password_size">New generates passwords will get this size</string>
    <string name="pref_enable_entry_deletion_confirmation_dialog">Shows a confirm dialog after deleting an entry</string>
    <string name="pref_disable_entry_deletion_confirmation_dialog">Deletes an entry right away, without any confirmation</string>
    <string name="pref_title_enable_entry_deletion_confirmation_dialog">Confirm entry deletion</string>
    <string name="confirm_entry_deletion">Confirm deletion</string>
</resources>
