<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="preference_enable_characters"
        android:summaryOn="@string/pref_description_enable_characters"
        android:summaryOff="@string/pref_description_disable_characters"
        android:title="@string/pref_title_enable_characters" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="preference_enable_numbers"
        android:summaryOn="@string/pref_description_enable_numbers"
        android:summaryOff="@string/pref_description_disable_numbers"
        android:title="@string/pref_title_enable_numbers"
        />

    <SwitchPreference
        android:defaultValue="true"
        android:key="preference_enable_special_characters"
        android:summaryOn="@string/pref_description_enable_special_characters"
        android:summaryOff="@string/pref_description_disable_special_characters"
        android:title="@string/pref_title_special_characters"
        />

    <SwitchPreference
        android:defaultValue="true"
        android:key="preference_enable_auto_incrementation"
        android:summaryOn="@string/pref_description_enable_auto_incrementation"
        android:summaryOff="@string/pref_description_disable_auto_incrementation"
        android:title="@string/pref_title_auto_incrementation"
        />

    <EditTextPreference
        android:defaultValue="8"
        android:key="preference_password_size"
        android:summary="@string/pref_description_password_size"
        android:title="@string/pref_title_password_size"
        android:numeric="decimal"
        android:inputType="number"
        />

</PreferenceScreen>
