<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_new"
        android:icon="@drawable/ic_file_plus_1703"
        android:title="@string/createNew"
        />
    <item android:id="@+id/menu_open"
        android:icon="@drawable/ic_directory_search_1623"
        android:title="@string/open"
        />
    <item android:id="@+id/menu_dismiss"
        android:icon="@drawable/ic_directory_search_1623"
        android:title="@string/dismiss"
        android:enabled="false"
        />
    <item android:id="@+id/menu_change_password"
        android:icon="@drawable/ic_arrow_right_left_343"
        android:title="@string/change_password"
        android:enabled="false"
        />
    <item android:id="@+id/menu_settings"
        android:icon="@drawable/ic_information_1447"
        android:title="@string/title_activity_arevelation_settings"
        />
    <item android:id="@+id/menu_about"
        android:icon="@drawable/ic_information_1447"
        android:title="@string/about"
    />
</menu>