<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              tools:ignore="NestedWeights"> <!-- Suppress nested weights warning - noncritical -->

    <ImageView
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/icon"
        android:contentDescription="@string/app_name"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:text="@string/app_name"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:text="a secure password manager for android"
        />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="20dp"
            android:gravity="center"
            android:text="@string/createNew"
            android:drawableStart="@drawable/ic_file_plus_1703"
            android:enabled="false"
            android:layout_gravity="bottom"
            android:textColor="#1bff92"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/btnOpen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="20dp"
            android:gravity="center"
            android:text="@string/open"
            android:layout_gravity="bottom"
            android:drawableStart="@drawable/ic_directory_search_1623"
            android:textColor="#1bff92"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/btnAbout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="20dp"
            android:gravity="center"
            android:text="@string/about"
            android:layout_gravity="bottom"
            android:drawableStart="@drawable/ic_information_1447"
            android:textColor="#1bff92"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>
</LinearLayout>